All lines added

--- a/Views/Home/dashboard.cshtml
+++ b/Views/Home/dashboard.cshtml
@@ -591,6 +591,7 @@
                     });
                 }
 			}
+
 		var YellowLineCoordinates = [
 			{ lat: 42.019068, lng: -87.672825, name: "Howard" },
 			{ lat: 42.019860, lng: -87.673855 },
@@ -601,7 +602,6 @@
 			{ lat: 42.026846, lng: -87.747583, name: "Oakton-Skokie" },
 			{ lat: 42.039597, lng: -87.752307, name: "Dempster-Skokie" }
 		];
-
 		var PurpleLineCoordinates = [
 			{ lat: 42.073605, lng: -87.690923, name: "Linden" },
 			{ lat: 42.063918, lng: -87.685612, name: "Central" },
@@ -630,7 +630,6 @@
 			{ lat: 41.882612, lng: -87.633885, name: "Washington/Wells" },
 			{ lat: 41.888874, lng: -87.633970, name: "Merchandise Mart" },
 		];
-
 		var BrownLineCoordinates = [
 			{ lat: 41.967640, lng: -87.712863, name: "Kimball" },
 			{ lat: 41.966077, lng: -87.708699, name: "Kedzie" },
@@ -659,7 +658,6 @@
 			{ lat: 41.882612, lng: -87.633885, name: "Washington/Wells" },
 			{ lat: 41.888874, lng: -87.633970, name: "Merchandise Mart" },
 		];
-
 		var RedLineCoordinates = [
 			{ lat: 42.018844, lng: -87.672690, name: "Howard" },
 			{ lat: 42.015950, lng: -87.669168, name: "Jarvis" },
@@ -693,8 +691,139 @@
 			{ lat: 41.735567, lng: -87.624786, name: "87th" },
 			{ lat: 41.722429, lng: -87.624462, name: "95th/Dan Ryan" }
 		];
+		var OrangeLineCoordinates = [
+		{ lat: 41.7866, lng: -87.7379, name: "Midway"},
+		{ lat: 41.7998, lng: -87.7245, name: "Pulaski"},
+		{ lat: 41.8042, lng: -87.7044, name: "Kedzie"},
+		{ lat: 41.8045, lng: -87.684, name: "Western"},
+		{ lat: 41.8294, lng: -87.6806, name: "35th/Archer"},
+		{ lat: 41.8392, lng: -87.6653, name: "Ashland"},
+		{ lat: 41.8468, lng: -87.6481, name: "Halsted"},
+		{ lat: 41.8674, lng: -87.6266, name: "Roosevelt"},
+		{ lat: 41.8795, lng: -87.626, name: "Adams/Wabash"},
+		{ lat: 41.8832, lng: -87.6262, name: "Washington/Wabash"},
+		{ lat: 41.8857, lng: -87.6278, name: "State/Lake"}
+		];
+		var PinkLineCoordinates = [
+			{lat: 41.8518, lng: -87.7567, name: "54th/Cermak"},
+			{lat: 41.8518, lng: -87.7453, name: "Cicero"},
+			{lat: 41.8537, lng: -87.7243, name: "Pulaski"},
+			{lat: 41.8538, lng: -87.7333, name: "Kostner"},
+			{lat: 41.8538, lng: -87.7148, name: "Central Park"},
+			{lat: 41.854, lng: -87.7054, name: "Kedzie"},
+			{lat: 41.8541, lng: -87.6948, name: "California"},
+			{lat: 41.8542, lng: -87.6851, name: "Western"},
+			{lat: 41.8545, lng: -87.676, name: "Damen"},
+			{lat: 41.8579, lng: -87.6691, name: "18th"},
+			{lat: 41.8716, lng: -87.6695, name: "Polk"},
+			{lat: 41.8853, lng: -87.667, name: "Ashland"},
+			{lat: 41.8856, lng: -87.6522, name: "Morgan"},
+			{lat: 41.8857, lng: -87.6418, name: "Clinton"},
+			{ lat: 41.882612, lng: -87.633885, name: "Washington/Wells" },
+			{ lat: 41.878729, lng: -87.633802, name: "Quincy" },
+			{ lat: 41.876882, lng: -87.631741, name: "LaSalle/VanBuren" },
+			{ lat: 41.876882, lng: -87.628798, name: "Harold Washington Library-State/Van Buren" },
+			{lat: 41.8795, lng: -87.626, name: "Adams/Wabash"},
+			{lat: 41.8832, lng: -87.6262, name: "Washington/Wabash"},
+			
+			
+			
+			{lat: 41.8857, lng: -87.6278, name: "State/Lake"},
+			{lat: 41.8857, lng: -87.6418, name: "Clinton"},
+		];
+		var BlueLineCoordinates = [
+			
+			
+			
+			
+			
+			{lat: 41.8743, lng: -87.8173, name: "Forest Park"},
+			{lat: 41.8735, lng: -87.807, name: "Harlem"},
+			{lat: 41.8721, lng: -87.7916, name: "Oak Park"},
+			{lat: 41.8708, lng: -87.7768, name: "Austin"},
+			{lat: 41.8716, lng: -87.7452, name: "Cicero"},
+			{lat: 41.8738, lng: -87.7257, name: "Pulaski"},
+			{lat: 41.8743, lng: -87.706, name: "Kedzie-Homan"},
+			{lat: 41.8755, lng: -87.6884, name: "Western"},
+			
+			
+			
+			{lat: 41.8757, lng: -87.6739, name: "Illinois Medical District"},
+			{lat: 41.8759, lng: -87.6595, name: "Racine"},
+			
+			{lat: 41.8755, lng: -87.6497, name: "UIC-Halsted"},
+			{lat: 41.8755, lng: -87.641, name: "Clinton"},
+			{lat: 41.8756, lng: -87.6317, name: "LaSalle"},
+			{lat: 41.8782, lng: -87.6293, name: "Jackson"},
+			{lat: 41.8807, lng: -87.6294, name: "Monroe"},
+			{lat: 41.8832, lng: -87.6294, name: "Washington"},
+			{lat: 41.8857, lng: -87.6309, name: "Clark/Lake"},
+			{lat: 41.8912, lng: -87.6476, name: "Grand"},
+			{lat: 41.8961, lng: -87.6552, name: "Chicago"},
+			{lat: 41.9034, lng: -87.6665, name: "Division"},
+			{lat: 41.9097, lng: -87.6774, name: "Damen"},
+			{lat: 41.9162, lng: -87.6874, name: "Western"},
+			{lat: 41.9219, lng: -87.6969, name: "California"},
+			{lat: 41.9297, lng: -87.7085, name: "Logan Square"},
+			{lat: 41.9381, lng: -87.7124, name: "Belmont"},
+			{lat: 41.9474, lng: -87.7191, name: "Addison"},
+			{lat: 41.9529, lng: -87.7292, name: "Irving Park"},
+			{lat: 41.9615, lng: -87.7436, name: "Montrose"},
+			{lat: 41.9706, lng: -87.7609, name: "Jefferson Park"},
+			
+			{lat: 41.9823, lng: -87.8089, name: "Harlem"},
+			
+			{lat: 41.9842, lng: -87.838, name: "Cumberland"},
+			{lat: 41.9835, lng: -87.8594, name: "Rosemont"},
+			{lat: 41.9777, lng: -87.9042, name: "O'Hare"}
+		];
+		var GreenLineCoordinates = [
 
-
+			{lat: 41.7803, lng: -87.6059, name: "Cottage Grove"},
+			{lat: 41.7801, lng: -87.6155, name: "King Drive"},
+			
+			{lat: 41.7789, lng: -87.6442, name: "Halsted"},
+			{lat: 41.7789, lng: -87.6638, name: "Ashland/63rd"},
+			{lat: 41.7801, lng: -87.6155, name: "King Drive"},
+			
+			
+			{lat: 41.7952, lng: -87.6183, name: "Garfield"},
+			{lat: 41.8021, lng: -87.6185, name: "51st"},
+			{lat: 41.8092, lng: -87.6188, name: "47th"},
+			{lat: 41.8165, lng: -87.619, name: "43rd"},
+			{lat: 41.8217, lng: -87.6214, name: "Indiana"},
+			{lat: 41.8317, lng: -87.6258, name: "35th-Bronzeville-IIT"},
+			{lat: 41.8531, lng: -87.6264, name: "Cermak-McCormick Place"},
+			{lat: 41.8674, lng: -87.6266, name: "Roosevelt"},
+			{lat: 41.8795, lng: -87.626, name: "Adams/Wabash"},
+			{lat: 41.8832, lng: -87.6262, name: "Washington/Wabash"},
+			{lat: 41.8857, lng: -87.6278, name: "State/Lake"},
+			{ lat: 41.885743, lng: -87.631489, name: "Clark/Lake" },
+			{lat: 41.8857, lng: -87.6418, name: "Clinton"},
+			{lat: 41.8856, lng: -87.6522, name: "Morgan"},
+			{lat: 41.8853, lng: -87.667, name: "Ashland"},
+			{lat: 41.8842, lng: -87.6962, name: "California"},
+			{lat: 41.8843, lng: -87.7062, name: "Kedzie"},
+			{lat: 41.8849, lng: -87.7165, name: "Conservatory"},
+			
+			{lat: 41.8854, lng: -87.7254, name: "Pulaski"},
+			
+			
+			
+			{lat: 41.8865, lng: -87.7447, name: "Cicero"},
+			{lat: 41.8872, lng: -87.755, name: "Laramie"},
+			{lat: 41.8874, lng: -87.7656, name: "Central"},
+			{lat: 41.8873, lng: -87.7741, name: "Austin"},
+			{lat: 41.8872, lng: -87.7837, name: "Ridgeland"},
+			
+			{lat: 41.887, lng: -87.7938, name: "Oak Park"},
+			{lat: 41.8868, lng: -87.8032, name: "Harlem/Lake"},
+			
+			
+			
+			
+		];
+		
 		var YellowLine = new google.maps.Polyline({
 			path: YellowLineCoordinates,
 			geodesic: false,
@@ -702,7 +831,6 @@
 			strokeOpacity: 0.8,
 			strokeWeight: 3
 		})
-
 		var PurpleLine = new google.maps.Polyline({
 			path: PurpleLineCoordinates,
 			geodesic: false,
@@ -710,7 +838,6 @@
 			strokeOpacity: 0.8,
 			strokeWeight: 3
 		})
-
 		var BrownLine = new google.maps.Polyline({
 			path: BrownLineCoordinates,
 			geodesic: false,
@@ -718,7 +845,6 @@
 			strokeOpacity: 0.8,
 			strokeWeight: 3
 		})
-
 		var RedLine = new google.maps.Polyline({
 			path: RedLineCoordinates,
 			geodesic: false,
@@ -726,11 +852,43 @@
 			strokeOpacity: 0.8,
 			strokeWeight: 3
 		})
-
+		var OrangeLine = new google.maps.Polyline({
+			path: OrangeLineCoordinates,
+			geodesic: false,
+			strokeColor: "orange",
+			strokeOpacity: 0.8,
+			strokeWeight: 3
+		})
+		var PinkLine = new google.maps.Polyline({
+			path: PinkLineCoordinates,
+			geodesic: false,
+			strokeColor: "pink",
+			strokeOpacity: 0.8,
+			strokeWeight: 3
+		})
+		var BlueLine = new google.maps.Polyline({
+			path: BlueLineCoordinates,
+			geodesic: false,
+			strokeColor: "blue",
+			strokeOpacity: 0.8,
+			strokeWeight: 3
+		})
+		var GreenLine = new google.maps.Polyline({
+			path: GreenLineCoordinates,
+			geodesic: false,
+			strokeColor: "green",
+			strokeOpacity: 0.8,
+			strokeWeight: 3
+		})
+		 
 		YellowLine.setMap(map);
 		PurpleLine.setMap(map);
 		BrownLine.setMap(map);
 		RedLine.setMap(map);
+		OrangeLine.setMap(map);
+		PinkLine.setMap(map);
+		BlueLine.setMap(map);
+		GreenLine.setMap(map);
 	}
 
 
